# ros_sim

./: .gitmodules
docs/: .$scene-pipeline.bkp  .$scene-pipeline.dtmp  scene-pipeline
src/arm_robot/: CMakeLists.txt  package.xml
src/arm_robot/config/: config.rviz
src/arm_robot/launch/: run.launch
src/arm_robot/model/: arm_robot.xacro
src/firefly/: CMakeLists.txt  package.xml
src/firefly/config/: config.rviz
src/firefly/launch/: firefly_pose_controller.launch  firefly_traj_controller.launch  mav_hovering_example.launch  spawn_mav.launch
src/firefly/src/: firefly_pose_controller.cpp  firefly_traj_controller.cpp
src/scene/: CMakeLists.txt  package.xml  truth.txt
src/scene/config/: rviz-config.rviz
src/scene/docs/: notes.aux  notes.tex  notes.toc
src/scene/launch/: gen-traj.launch  generate-actor.launch  keyboard_teleop.launch  rosbag-record.launch  rqt-plot.launch  rviz.launch  scene-no-roof.launch  scene.launch  scene_node.launch  sim-scene-controller.launch
src/scene/model/: update-model.sh
src/scene/scripts/: diff_wheeled_robot_key
src/scene/src/: gen_traj.cpp  generate_actor.cpp  main.cpp
src/scene/urdf/: camera.xacro  imu.xacro  lidar.xacro  sensor-camera.xacro  sensor-imu.xacro  sensor-laser.xacro  sim-robot.xacro
src/scene/world/: sim-scene.sdf  sim-scene.world
src/trajectory_controller/: CMakeLists.txt  package.xml
src/trajectory_controller/launch/: generate_trajectory.launch  move_group_interface.launch
src/trajectory_controller/src/: CMakeLists.txt  generate_trajectory.cpp  move_group_interface.cpp
(+41 files in other folders)
